# binance4py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
binance4py/: __init__.py  api.py  client.py  endpoints.py  exception.py  typing.py  utils.py  websocket.py
binance4py/resources/: __init__.py  base.py  general.py  market.py  spot.py
