[tool.poetry]
name = "binance4py"
version = "1.0.0"
description = "Python binance API wrapper"
authors = ["ren3104 <2ren3104@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ren3104/binance4py"
repository = "https://github.com/ren3104/binance4py"
keywords = [
    "python",
    "binance4py",
    "api",
    "websocket",
    "cryptocurrency",
    "crypto",
    "exchange",
    "trade",
    "trading",
    "binance",
    "bitcoin",
    "btc",
    "ethereum",
    "eth"
]
classifiers = [
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Typing :: Typed"
]
packages = [
    { include = "binance4py", from = "." }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ren3104/binance4py/issues"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.7
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
